[package]
name = "spectre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }

tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "net"] }
tokio-postgres = "0.7.7"

deadpool = { version = "0.9.5", features = ["rt_tokio_1"] }
deadpool-postgres = "0.10.3"


reqwest = { version = "0.11.13", features = ["json"] }
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }

anyhow = "1.0.0"
thiserror = "1.0.0"
